# citadel-crm

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  package-lock.json  package.json  prisma.config.ts  tsconfig.json
backend/prisma/: schema.prisma  seed.ts
backend/prisma/migrations/20260128234914_init/: migration.sql
backend/src/: app.ts  server.ts
backend/src/config/: database.ts  env.ts
backend/src/constants/: cadence.ts
backend/src/middleware/: error-handler.ts  validate.ts
backend/src/routes/: activity.ts  contacts.ts  dashboard.ts  groups.ts  import.ts  interactions.ts  notable-dates.ts  regions.ts  reminders.ts  settings.ts  tags.ts
backend/src/validators/: contacts.schema.ts  groups.schema.ts  interactions.schema.ts  notable-dates.schema.ts  reminders.schema.ts  tags.schema.ts
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  contacts.ts  dashboard.ts  groups.ts  interactions.ts  notable-dates.ts  regions.ts  reminders.ts  settings.ts  tags.ts
frontend/src/hooks/: useContacts.ts  useDashboard.ts  useGroups.ts  useInteractions.ts  useRegions.ts  useReminders.ts  useTags.ts
frontend/src/pages/: ContactDetail.tsx  Contacts.tsx  Dashboard.tsx  Settings.tsx
frontend/src/types/: index.ts
frontend/src/utils/: abbu-parser.ts
plans/: feat-contact-activity-heatmap-timeline.md  feat-ios-sync-script.md
sync-script/: README.md  pyproject.toml
sync-script/src/crm_sync/: __init__.py  api.py  calls.py  cli.py  config.py  contacts.py  messages.py  phone.py
(+13 files in other folders)
