[project]
name = "crm-sync"
version = "0.1.0"
description = "Sync macOS contacts, iMessages, and call history to Citadel CRM"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "phonenumbers>=8.13",
]

[project.scripts]
crm-sync = "crm_sync.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
